--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
-# Logs
-logs
-*.log
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# npm
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+
 
 node_modules
 dist
